<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timer"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/not_recording"
        android:textSize="48sp" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleRoundedCornerRadius="10dp" />

    <com.imotorini.sbobinator9000.WaveformView
        android:id="@+id/waveformView"
        android:layout_width="match_parent"
        android:layout_height="600px"
        app:layout_anchor="@+id/recbutt"
        android:layout_gravity="top"
        android:layout_marginBottom="100dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp">

        <ImageButton
            android:id="@+id/playpause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/pause"
            android:visibility="gone" /> <!-- Inizialmente nascosto -->

        <ImageButton
            android:id="@+id/transcribe"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toRightOf="@+id/playpause"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/pen_field_24"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>

    <!-- Floating Action Button (FAB) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/recbutt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        app:borderWidth="0.5dp"
        app:elevation="5dp"
        app:fabCustomSize="70dp"
        app:layout_anchor="@+id/bottom_app_bar"
        app:layout_anchorGravity="top|center"
        app:srcCompat="@drawable/microphone_48"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
